feat: 新增基本信息字段
